--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		<a href=#>One</a>
 		<a href=#>Two</a>
 		<a href=#>Three</a>
-		<a href=#>Mine</a>
+		<a href="https://jrutty70.github.io/about.html">Mine</a>
 	</nav>
 	<section>
 		<h2>Favorite Foods</h2>
